<resources>
    <string name="app_name">Gasto de Viagem</string>
    <string name="distancia">Distância</string>
    <string name="preco">Preço</string>
    <string name="total_de_quilometros">Total de quilômetros</string>
    <string name="preco_por_litro">Preço por litro</string>
    <string name="km_por_litro">KM por litro</string>
    <string name="autonomia">Autonomia</string>
    <string name="gasto_total">Seu gasto total será de</string>
    <string name="calcular">Calcular</string>
    <string name="valor_dinheiro_total">R$ 0</string>
    <string name="preencher_todos_campos">Preencha todos os campos!</string>
    <string name="informe_valores_validos">Por favor, inserir dados válidos!</string>
</resources>